@@ -4,6 +4,8 @@ Changes to Version 2.0-0
 
   o Calls to deprecated functions .find.package() and .path.package() replaced by find.package() and path.package() (suggestion of Brian Ripley).
 
+  o Partial correlations now optionally report pairwise p-values (suggestion of Aaron Swink).
+
   o Small fixes.
 
 Changes to Version 1.9-5
